--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -1,172 +1,48 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
+# Polybar Config v1.0
 
-[colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+# Colors 
+include-file = $HOME/.config/polybar/modules/colors.ini
 
+# Main Bar
 [bar/mybar]
 width = 100%
-height = 24pt
+height = 20pt
 radius = 0
-
-; dpi = 96
-
+# dpi = 95
 background = ${colors.background}
 foreground = ${colors.foreground}
-
 line-size = 3pt
-
 border-size = 0pt
 border-color = #00000000
-
 padding-left = 0
 padding-right = 1
-
 module-margin = 1
-
 separator = |
 separator-foreground = ${colors.disabled}
-
 font-0 = monospace;2
-
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
-
+font-1 = Hack;2
+font-2 = "Font Awesome 6 Free";2
+font-3 = "Font Awesome 6 Brands";2
+font-4 = "Nerd Font":style=Regular;2
+font-5 = "Iosevka Nerd Font:pixelsize=12;3"
+font-6 = "Iosevka Nerd Font:pixelsize=12;3"
+font-7 = "feather:pixelsize=12;3"
+modules-left = xworkspaces
+modules-right = cpu pulseaudio backlight battery 
+modules-center = date
 cursor-click = pointer
 cursor-scroll = ns-resize
-
 enable-ipc = true
+wm-restack = bspwm
+override-redirect = false
 
-; tray-position = right
+# Modules
+include-file = $HOME/.config/polybar/modules/main.ini
+include-file = $HOME/.config/polybar/modules/battery_brightness.ini
+#include-file = $HOME/.config/polybar/modules/powermenu.ini
 
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
-
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
-[module/date]
-type = internal/date
-interval = 1
-
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
-label = %date%
-label-foreground = ${colors.primary}
-
+# Settings
 [settings]
 screenchange-reload = true
-pseudo-transparency = true
+pseudo-transparency = false
 
-; vim:ft=dosini
